Fixed forum menu item highlight for SMF2. Added CSS to fix editor stretching beyond limits. Changed language string that clashed with SMF.

--- a/SMF2/Themes/default/tp-style.css
+++ b/SMF2/Themes/default/tp-style.css
@@ -1781,3 +1781,10 @@ div.useravatar img
 {
  color: #008;
 }
+.editor {
+	height: 100px;
+	width: 635px;
+	max-width: 100%;
+	min-width: 100%;
+	margin: 0.25em 0 1em 0;
+}
